--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "JavaScript_ES6",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/danvb112/JavaScript_ES6.git",
-  "author": "danvb112 <danielbonasser@gmail.com>",
+  "repository": "git@github.com:danvb112/JavaScript_ES6.git",
+  "author": "Daniel Bonasser <danielbonasser@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
+  "devDpendencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
     "webpack": "^4.41.6",
-    "webpack-cli": "^4.0.0-beta.2"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "dev": "webpack --mode=development -w"
+    "dev": "webpack-dev-server --mode=development"
   }
 }
