--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "JavaScript_ES6",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:danvb112/JavaScript_ES6.git",
-  "author": "Daniel Bonasser <danielbonasser@gmail.com>",
+  "repository": "https://github.com/danvb112/JavaScript_ES6.git",
   "license": "MIT",
-  "devDpendencies": {
+  "dependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
-    "babel-loader": "^8.0.6",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "axios": "^0.19.2",
+    "babel-loader": "^8.0.6"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode=development"
+    "dev": "babel ./src/main.js -o  ./public/bundle.js -w "
   }
 }
