--- a/Desafios/package.json
+++ b/Desafios/package.json
@@ -14,6 +14,6 @@
     "babel-loader": "^8.0.6"
   },
   "scripts": {
-    "dev": "babel exercicio7.js -o bundle.js -w"
+    "dev": "babel main.js -o bundle.js -w"
   }
 }
